Commit revisi baru about.xhtml

--- a/about.xhtml
+++ b/about.xhtml
@@ -20,7 +20,7 @@
         <!-- Banner Goes Here-->
         <div class="banner-area"><br/><br/><br/><br/>
             <h2>Helmet Solution</h2><br/><br/>
-            <h5>Trusted Helmet Shop in Indonesia</h5>
+            <h5>The most trusted Helmet Shop in Indonesia</h5>
         </div>
         <br>
         <div class="content-area">
